--- a/index.html
+++ b/index.html
@@ -3,176 +3,158 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Official Digital Mission</title>
+    <title>ልማት Hub | Enrollment Portal</title>
     <style>
-        :root {
-            --blue: #003973;
-            --yellow: #FFD700;
-            --bg: #f4f7f9;
-            --white: #ffffff;
-        }
-
+        :root { --blue: #003973; --yellow: #FFD700; --bg: #f8f9fa; --green: #28a745; }
         * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; scroll-behavior: smooth; }
         body { background: var(--bg); color: #333; }
 
-        /* 1. SCROLLING TICKER */
-        .ticker-wrap {
-            background: var(--yellow);
-            color: var(--blue);
-            padding: 10px 0;
-            font-weight: bold;
-            overflow: hidden;
-            white-space: nowrap;
-            position: sticky;
-            top: 0;
-            z-index: 2000;
-            text-transform: uppercase;
-        }
-        .ticker-move {
-            display: inline-block;
-            padding-left: 100%;
-            animation: ticker-animation 30s linear infinite;
-        }
-        @keyframes ticker-animation {
-            0% { transform: translateX(0); }
-            100% { transform: translateX(-100%); }
-        }
+        /* HEADER */
+        .ticker { background: var(--yellow); color: var(--blue); padding: 10px 0; font-weight: bold; position: sticky; top: 0; z-index: 2000; overflow: hidden; white-space: nowrap; }
+        .ticker-content { display: inline-block; padding-left: 100%; animation: scroll 30s linear infinite; }
+        @keyframes scroll { 0% { transform: translateX(0); } 100% { transform: translateX(-100%); } }
 
-        /* 2. NAVIGATION HEADER */
-        header {
-            background: var(--white);
-            height: 70px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 8%;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            position: sticky;
-            top: 40px; /* Sits below ticker */
-            z-index: 1000;
-        }
-        .logo { font-size: 24px; font-weight: bold; color: var(--blue); text-decoration: none; }
-        .nav-links { display: flex; gap: 20px; align-items: center; }
-        .nav-links a { text-decoration: none; color: #444; font-weight: 600; font-size: 0.9rem; }
-        .lang-select { padding: 5px; border-radius: 5px; border: 1.5px solid var(--blue); cursor: pointer; }
+        nav { display: flex; justify-content: space-between; align-items: center; padding: 15px 8%; background: white; border-bottom: 1px solid #ddd; position: sticky; top: 38px; z-index: 1000; }
+        .lang-select { padding: 6px; border-radius: 5px; border: 2px solid var(--blue); cursor: pointer; font-weight: bold; }
 
-        /* 3. HERO SECTION */
-        .container { max-width: 1100px; margin: 30px auto; padding: 0 20px; }
-        .hero {
-            background: var(--blue);
-            color: white;
-            padding: 60px 20px;
-            border-radius: 24px;
-            text-align: center;
-            border-bottom: 8px solid var(--yellow);
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-        }
-        .id-input { padding: 15px; width: 85%; max-width: 400px; border-radius: 12px; border: none; margin: 20px 0; text-align: center; font-size: 1.1rem; }
+        .container { max-width: 1100px; margin: 0 auto; padding: 40px 5%; }
 
-        /* 4. TRACKS GRID */
+        /* TRACKS GRID */
         .section-h { color: var(--blue); margin: 50px 0 20px; border-left: 8px solid var(--yellow); padding-left: 15px; }
-        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 25px; }
-        .card { background: white; border-radius: 20px; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.05); transition: 0.3s; text-align: center; }
-        .card:hover { transform: translateY(-10px); }
-        .card img { width: 100%; height: 190px; object-fit: cover; }
-        .card-body { padding: 20px; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; }
+        .t-box { background: white; border-radius: 20px; overflow: hidden; box-shadow: 0 10px 20px rgba(0,0,0,0.05); border: 1px solid #eee; transition: 0.3s; text-align: center; }
+        .t-box:hover { transform: translateY(-8px); }
+        .t-img { width: 100%; height: 180px; background: var(--blue); }
+        .t-img img { width: 100%; height: 100%; object-fit: cover; }
         
-        .btn { background: var(--yellow); color: var(--blue); border: none; padding: 12px 20px; border-radius: 10px; font-weight: bold; cursor: pointer; width: 100%; transition: 0.2s; }
+        .btn { background: var(--yellow); color: var(--blue); padding: 12px 25px; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; width: 100%; transition: 0.3s; }
         .btn:hover { background: var(--blue); color: white; }
 
-        footer { text-align: center; padding: 50px; color: #888; border-top: 1px solid #ddd; margin-top: 40px; }
+        /* ENROLLMENT MODAL */
+        #joinModal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 3000; align-items: center; justify-content: center; }
+        .modal-content { background: white; padding: 30px; border-radius: 20px; width: 90%; max-width: 450px; position: relative; text-align: center; }
+        .modal-content input { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ccc; border-radius: 8px; }
+
+        /* FAQ */
+        .faq-card { background: white; padding: 20px; border-radius: 15px; margin-bottom: 10px; cursor: pointer; border: 1px solid #ddd; }
+        .faq-ans { display: none; padding-top: 10px; color: #666; font-size: 0.95rem; border-top: 1px solid #eee; margin-top: 10px; }
     </style>
 </head>
 <body>
 
-<div class="ticker-wrap">
-    <div class="ticker-move">
-        MISSION 2026: ENROLLMENT OPEN • VERIFIED BY FAYDA NATIONAL ID • JOIN THE DIGITAL TRANSFORMATION NOW • 1 MILLION CITIZENS GOAL • 
-    </div>
-</div>
+<div class="ticker"><div class="ticker-content" id="tick-text">MISSION 2026: ENROLLMENT OPEN • VERIFIED BY FAYDA NATIONAL ID •</div></div>
 
-<header>
-    <a href="#" class="logo">ልማት Hub</a>
+<nav>
+    <h2 style="color:var(--blue)">ልማት Hub</h2>
     <div class="nav-links">
-        <a href="#about" id="nav-a">About</a>
-        <a href="#tracks" id="nav-t">Tracks</a>
         <select class="lang-select" onchange="updLang(this.value)">
             <option value="en">English</option>
             <option value="am">አማርኛ</option>
             <option value="om">Oromoo</option>
+            <option value="tg">ትግርኛ</option>
         </select>
     </div>
-</header>
+</nav>
 
 <div class="container">
-    <div class="hero">
-        <h1 id="h-title">Ethiopia's 2026 Digital Mission</h1>
-        <p id="h-sub">Enter Fayda ID to verify enrollment status</p>
-        <input type="number" id="id-box" class="id-input" placeholder="Enter Fayda ID Number">
-        <br>
-        <button class="btn" style="width:auto; padding: 15px 50px;" onclick="alert('System verifying Fayda ID...')">VERIFY & ENTER</button>
-    </div>
+    <h2 class="section-h" id="t-head">Official Tracks</h2>
+    <div class="grid" id="track-list"></div>
 
-    <div id="about">
-        <h2 class="section-h" id="a-head">About Us</h2>
-        <p id="a-text" style="background:white; padding:25px; border-radius:15px; border: 1px solid #eee;">
-            ልማት Hub is the official gateway for Ethiopia's 2026 Digital Mission. We aim to equip 1 million citizens with the tools to lead in the digital economy.
-        </p>
-    </div>
+    <h2 class="section-h" id="f-head">FAQ</h2>
+    <div id="faq-list"></div>
+</div>
 
-    <div id="tracks">
-        <h2 class="section-h" id="t-head">Official Tracks</h2>
-        <div class="grid" id="track-list"></div>
+<div id="joinModal">
+    <div class="modal-content">
+        <span onclick="closeModal()" style="position:absolute; right:20px; top:10px; cursor:pointer; font-size:24px;">&times;</span>
+        <h2 id="m-title">Join Track</h2>
+        <p id="m-sub" style="margin-bottom:15px; color:var(--blue); font-weight:bold;"></p>
+        <input type="text" id="regName" placeholder="Full Name">
+        <input type="number" id="regID" placeholder="Fayda ID Number">
+        <button class="btn" onclick="submitEnroll()" id="m-btn">Confirm Enrollment</button>
     </div>
 </div>
 
-<footer>© 2026 ልማት Hub | Official Government Partner</footer>
-
 <script>
     const images = [
-        "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=500", 
-        "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=500",
-        "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=500",
-        "https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?w=500",
-        "https://images.unsplash.com/photo-1451187580459-43490279c0fa?w=500",
-        "https://images.unsplash.com/photo-1512941937669-90a1b58e7e9c?w=500",
-        "https://images.unsplash.com/photo-1639762681485-074b7f938ba0?w=500",
-        "https://images.pexels.com/photos/196644/pexels-photo-196644.jpeg?w=500",
-        "https://images.unsplash.com/photo-1518770660439-4636190af475?w=500",
-        "https://images.pexels.com/photos/259200/pexels-photo-259200.jpeg?w=500"
+        "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=500", // AI
+        "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=500", // Cyber
+        "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=500", // Web
+        "https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?w=500", // Data
+        "https://images.unsplash.com/photo-1451187580459-43490279c0fa?w=500", // Cloud
+        "https://images.unsplash.com/photo-1512941937669-90a1b58e7e9c?w=500", // Mobile
+        "https://images.unsplash.com/photo-1639762681485-074b7f938ba0?w=500", // Blockchain
+        "https://images.pexels.com/photos/196644/pexels-photo-196644.jpeg?w=500", // UI
+        "https://images.unsplash.com/photo-1518770660439-4636190af475?w=500", // IoT
+        "https://images.pexels.com/photos/259200/pexels-photo-259200.jpeg?w=500"  // Fintech
     ];
 
     const data = {
         en: {
-            title: "Ethiopia's 2026 Digital Mission", sub: "Enter Fayda ID to verify enrollment status", 
-            about: "About Us", tracks: "Official Tracks", join: "JOIN TRACK",
-            trackNames: ["AI Engineering", "Cyber Security", "Web Dev", "Data Science", "Cloud", "Mobile Dev", "Blockchain", "UI/UX", "IoT", "Fintech"]
+            tH: "Official Tracks", fH: "FAQ", jB: "JOIN TRACK", mT: "Join Mission", mB: "Confirm Enrollment",
+            tracks: ["AI Engineering", "Cyber Security", "Web Dev", "Data Science", "Cloud", "Mobile Dev", "Blockchain", "UI/UX", "IoT", "Fintech"],
+            faqs: [
+                {q: "Is it free?", a: "Yes, it is 100% free for all citizens."},
+                {q: "How long is the training?", a: "Each track lasts for 12 weeks."}
+            ]
         },
         am: {
-            title: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ", sub: "ምዝገባውን ለማረጋገጥ የፋይዳ መታወቂያዎን ያስገቡ", 
-            about: "ስለ እኛ", tracks: "ይፋዊ ትራኮች", join: "ተቀላቀል",
-            trackNames: ["አርቴፊሻል ኢንተለጀንስ", "የሳይበር ደህንነት", "የድር ልማት", "የመረጃ ሳይንስ", "ክላውድ", "ሞባይል ልማት", "ብሎክቼይን", "ዲዛይን", "አይኦቲ", "ፊንቴክ"]
+            tH: "ይፋዊ ትራኮች", fH: "ተደጋጋሚ ጥያቄዎች", jB: "ተቀላቀል", mT: "ተልዕኮውን ይቀላቀሉ", mB: "ምዝገባውን አረጋግጥ",
+            tracks: ["አርቴፊሻል ኢንተለጀንስ", "የሳይበር ደህንነት", "የድር ልማት", "የመረጃ ሳይንስ", "ክላውድ", "ሞባይል ልማት", "ብሎክቼይን", "ዲዛይን", "አይኦቲ", "ፊንቴክ"],
+            faqs: [
+                {q: "ክፍያ አለው?", a: "አይ፣ ለሁሉም ዜጎች 100% ነፃ ነው።"},
+                {q: "ስልጠናው ለስንት ጊዜ ነው?", a: "እያንዳንዱ ትራክ ለ 12 ሳምንታት ይቆያል።"}
+            ]
         }
+        // Oromo and Tigrinya can be added following the same pattern
     };
 
     function updLang(l) {
-        const d = data[l] || data.en;
-        document.getElementById('h-title').innerText = d.title;
-        document.getElementById('h-sub').innerText = d.sub;
-        document.getElementById('a-head').innerText = d.about;
-        document.getElementById('t-head').innerText = d.tracks;
+        const d = data[l] || data['en'];
+        document.getElementById('t-head').innerText = d.tH;
+        document.getElementById('f-head').innerText = d.fH;
+        document.getElementById('m-title').innerText = d.mT;
+        document.getElementById('m-btn').innerText = d.mB;
 
-        const list = document.getElementById('track-list');
-        list.innerHTML = "";
-        d.trackNames.forEach((name, i) => {
-            list.innerHTML += `<div class="card">
-                <img src="${images[i]}">
-                <div class="card-body"><h3>${name}</h3><button class="btn" onclick="alert('Enrolling in ${name}...')">${d.join}</button></div>
+        const tList = document.getElementById('track-list'); tList.innerHTML = "";
+        d.tracks.forEach((t, i) => {
+            tList.innerHTML += `<div class="t-box">
+                <div class="t-img"><img src="${images[i]}"></div>
+                <div style="padding:15px"><b>${t}</b><button class="btn" onclick="openModal('${t}')">${d.jB}</button></div>
+            </div>`;
+        });
+
+        const fList = document.getElementById('faq-list'); fList.innerHTML = "";
+        d.faqs.forEach((f, i) => {
+            fList.innerHTML += `<div class="faq-card" onclick="toggleF(${i})">
+                <b>${f.q}</b><div id="ans${i}" class="faq-ans">${f.a}</div>
             </div>`;
         });
     }
 
-    // INITIAL LOAD
+    function openModal(track) {
+        document.getElementById('joinModal').style.display = 'flex';
+        document.getElementById('m-sub').innerText = track;
+    }
+
+    function closeModal() { document.getElementById('joinModal').style.display = 'none'; }
+
+    function toggleF(i) {
+        const a = document.getElementById('ans' + i);
+        a.style.display = a.style.display === 'block' ? 'none' : 'block';
+    }
+
+    function submitEnroll() {
+        const name = document.getElementById('regName').value;
+        const id = document.getElementById('regID').value;
+        if(name && id.length >= 10) {
+            alert("Congratulations " + name + "! You are enrolled. Check your email for details.");
+            closeModal();
+        } else {
+            alert("Please enter full name and valid 10-digit Fayda ID.");
+        }
+    }
+
     updLang('en');
 </script>
 </body>
