--- a/index.html
+++ b/index.html
@@ -3,30 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Digital Mission 2026</title>
+    <title>ልማት Hub | Mission 2026</title>
     <style>
         :root { --blue: #003973; --yellow: #FFD700; --bg: #f4f7f9; --white: #ffffff; }
         * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; scroll-behavior: smooth; }
         body { background: var(--bg); color: #333; }
 
-        /* TICKER */
         .ticker-wrap { background: var(--yellow); color: var(--blue); padding: 10px 0; font-weight: bold; overflow: hidden; white-space: nowrap; position: sticky; top: 0; z-index: 2000; }
         .ticker-move { display: inline-block; padding-left: 100%; animation: ticker 30s linear infinite; }
         @keyframes ticker { 0% { transform: translateX(0); } 100% { transform: translateX(-100%); } }
 
-        /* HEADER */
         header { background: var(--white); height: 75px; display: flex; justify-content: space-between; align-items: center; padding: 0 8%; box-shadow: 0 2px 10px rgba(0,0,0,0.1); position: sticky; top: 40px; z-index: 1000; }
         .logo { font-size: 26px; font-weight: 800; color: var(--blue); text-decoration: none; }
         .nav-links { display: flex; gap: 25px; align-items: center; }
         .nav-links a { text-decoration: none; color: #444; font-weight: 600; }
-        .lang-select { padding: 6px; border-radius: 6px; border: 2px solid var(--blue); cursor: pointer; }
+        .lang-select { padding: 6px; border-radius: 6px; border: 2px solid var(--blue); cursor: pointer; font-weight: bold; }
 
-        /* HERO */
         .container { max-width: 1100px; margin: 40px auto; padding: 0 20px; }
         .hero { background: var(--blue); color: white; padding: 60px 20px; border-radius: 25px; text-align: center; border-bottom: 8px solid var(--yellow); box-shadow: 0 10px 30px rgba(0,0,0,0.15); }
-        .id-input { padding: 15px; width: 85%; max-width: 400px; border-radius: 12px; border: none; margin: 20px 0; text-align: center; font-size: 1.1rem; box-shadow: inset 0 2px 4px rgba(0,0,0,0.1); }
+        .id-input { padding: 15px; width: 85%; max-width: 400px; border-radius: 12px; border: none; margin: 20px 0; text-align: center; font-size: 1.1rem; }
 
-        /* TRACKS */
         .section-h { color: var(--blue); margin: 50px 0 20px; border-left: 8px solid var(--yellow); padding-left: 15px; font-size: 2rem; }
         .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 25px; }
         .card { background: white; border-radius: 20px; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.05); text-align: center; transition: 0.3s; }
@@ -37,7 +33,6 @@
         .btn { background: var(--yellow); color: var(--blue); border: none; padding: 12px; border-radius: 10px; font-weight: bold; cursor: pointer; width: 100%; transition: 0.2s; }
         .btn:hover { background: var(--blue); color: white; }
 
-        /* CONTACT FORM */
         .contact-box { background: white; padding: 30px; border-radius: 20px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); }
         .contact-box input, .contact-box textarea { width: 100%; padding: 12px; margin-bottom: 15px; border: 1px solid #ddd; border-radius: 10px; }
 
@@ -46,17 +41,18 @@
 </head>
 <body>
 
-<div class="ticker-wrap"><div class="ticker-move">MISSION 2026: ENROLLMENT OPEN • 1 MILLION CITIZENS GOAL • VERIFIED BY FAYDA ID •</div></div>
+<div class="ticker-wrap"><div class="ticker-move" id="ticker-text">MISSION 2026: ENROLLMENT OPEN • 1 MILLION CITIZENS GOAL • VERIFIED BY FAYDA ID •</div></div>
 
 <header>
     <a href="#" class="logo">ልማት Hub</a>
     <div class="nav-links">
-        <a href="#about">About</a>
-        <a href="#tracks">Tracks</a>
-        <a href="#contact">Contact</a>
-        <select class="lang-select" onchange="updLang(this.value)">
+        <a href="#about" id="nav-about">About</a>
+        <a href="#tracks" id="nav-tracks">Tracks</a>
+        <a href="#contact" id="nav-contact">Contact</a>
+        <select class="lang-select" id="langPicker" onchange="updLang(this.value)">
             <option value="en">English</option>
             <option value="am">አማርኛ</option>
+            <option value="om">Oromoo</option>
         </select>
     </div>
 </header>
@@ -81,9 +77,9 @@
     <div id="contact">
         <h2 class="section-h" id="c-head">Contact Us</h2>
         <div class="contact-box">
-            <input type="text" placeholder="Your Name">
-            <textarea placeholder="How can we help?" rows="4"></textarea>
-            <button class="btn" style="width:auto; padding: 12px 40px;">Send Message</button>
+            <input type="text" id="c-name-ph" placeholder="Your Name">
+            <textarea id="c-msg-ph" placeholder="How can we help?" rows="4"></textarea>
+            <button class="btn" id="c-btn" style="width:auto; padding: 12px 40px;">Send Message</button>
         </div>
     </div>
 </div>
@@ -91,7 +87,6 @@
 <footer>© 2026 ልማት Hub | Official Platform</footer>
 
 <script>
-    /* --- INVISIBLE LOGIC --- */
     const images = [
         "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=500", "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=500",
         "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=500", "https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?w=500",
@@ -101,41 +96,61 @@
     ];
 
     const data = {
-        en: { title: "Ethiopia's 2026 Digital Mission", about: "About Us", tracks: "Official Tracks", contact: "Contact Us", join: "JOIN TRACK", names: ["AI", "Cyber", "Web", "Data", "Cloud", "Mobile", "Block", "UI/UX", "IoT", "Fintech"] },
-        am: { title: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ", about: "ስለ እኛ", tracks: "ይፋዊ ትራኮች", contact: "ያግኙን", join: "ተቀላቀል", names: ["አርቴፊሻል ኢንተለጀንስ", "የሳይበር ደህንነት", "የድር ልማት", "የመረጃ ሳይንስ", "ክላውድ", "ሞባይል", "ብሎክቼይን", "ዲዛይን", "አይኦቲ", "ፊንቴክ"] }
+        en: { 
+            title: "Ethiopia's 2026 Digital Mission", about: "About Us", tracks: "Official Tracks", contact: "Contact Us", join: "JOIN TRACK", 
+            welcome: "Welcome back! You joined: ", ticker: "MISSION 2026: ENROLLMENT OPEN • 1 MILLION CITIZENS GOAL • VERIFIED BY FAYDA ID •",
+            names: ["AI", "Cyber", "Web", "Data", "Cloud", "Mobile", "Block", "UI/UX", "IoT", "Fintech"] 
+        },
+        am: { 
+            title: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ", about: "ስለ እኛ", tracks: "ይፋዊ ትራኮች", contact: "ያግኙን", join: "ተቀላቀል", 
+            welcome: "እንኳን ደህና መጡ! የተቀላቀሉት ትራክ፡ ", ticker: "ተልዕኮ 2026፡ ምዝገባ ተከፍቷል • ለ1 ሚሊዮን ዜጎች • በፋይዳ መታወቂያ የተረጋገጠ •",
+            names: ["አርቴፊሻል ኢንተለጀንስ", "የሳይበር ደህንነት", "የድር ልማት", "የመረጃ ሳይንስ", "ክላውድ", "ሞባይል", "ብሎክቼይን", "ዲዛይን", "አይኦቲ", "ፊንቴክ"] 
+        },
+        om: {
+            title: "Misiyoona Diijitaalaa Itiyoophiyaa 2026", about: "Waa'ee Keenya", tracks: "Kallattiiwwan Ofishiyaalaa", contact: "Nu Quunnamaa", join: "ITTI MAKKAMI", 
+            welcome: "Baga nagaan dhuftan! Kallattiin keessan: ", ticker: "MISIYOONA 2026: GALMEEN BANAMEERA • LAMMIIWWAN MILIYOONA 1'F • FAYDAA ID'N MIRKAA'EERA •",
+            names: ["AI Engineering", "Cyber Security", "Web Dev", "Data Science", "Cloud", "Mobile", "Blockchain", "UI/UX", "IoT", "Fintech"]
+        }
     };
 
     function handleJoin(name) {
         const id = document.getElementById('id-box').value;
-        if (id.length < 10) { alert("Enter 10-digit Fayda ID."); } 
+        if (id.length < 10) { alert("Please enter 10-digit Fayda ID."); } 
         else {
             localStorage.setItem('userEnroll', JSON.stringify({id, name}));
-            alert("Joined " + name);
+            alert("Success! Joined " + name);
             location.reload();
         }
     }
 
     function updLang(l) {
+        localStorage.setItem('hubLang', l);
         const d = data[l] || data.en;
         document.getElementById('h-title').innerText = d.title;
         document.getElementById('a-head').innerText = d.about;
         document.getElementById('t-head').innerText = d.tracks;
         document.getElementById('c-head').innerText = d.contact;
+        document.getElementById('ticker-text').innerText = d.ticker;
+        
         const list = document.getElementById('track-list');
         list.innerHTML = "";
         d.names.forEach((n, i) => {
             list.innerHTML += `<div class="card"><img src="${images[i]}"><div class="card-body"><h3>${n}</h3><button class="btn" onclick="handleJoin('${n}')">${d.join}</button></div></div>`;
         });
+
+        // Check enrollment display after language switch
+        const saved = localStorage.getItem('userEnroll');
+        if (saved) {
+            const info = JSON.parse(saved);
+            document.getElementById('h-sub').innerHTML = `<b>${d.welcome}${info.name}</b>`;
+            document.getElementById('id-box').style.display = 'none';
+        }
     }
 
-    const saved = localStorage.getItem('userEnroll');
-    if (saved) {
-        const info = JSON.parse(saved);
-        document.getElementById('h-sub').innerHTML = `<b>Welcome back! You joined: ${info.name}</b>`;
-        document.getElementById('id-box').style.display = 'none';
-    }
-
-    updLang('en');
+    // Load saved language or default to English
+    const savedLang = localStorage.getItem('hubLang') || 'en';
+    document.getElementById('langPicker').value = savedLang;
+    updLang(savedLang);
 </script>
 </body>
 </html>
